Fix spacing for lowest item in sidebar.

--- a/legacy/public.styl
+++ b/legacy/public.styl
@@ -6341,11 +6341,6 @@ span.field-label+*>*:first-child,
     padding: 0 0 20px;
     margin: 0 0 20px
 }
-.list-item:last-child {
-    border-bottom: none;
-    margin: 0;
-    padding: 0
-}
 .tabbed-info-wrapper .desktop-33-right .list-item:first-child {
     padding-top: 20px
 }
